--- a/Natours/starter/css/style.css
+++ b/Natours/starter/css/style.css
@@ -94,6 +94,7 @@ body {
         placing items at 50% will have everything off because it will begin in the middle of the parent element
         but we use the transform translate to move the items -50% of the elements width to have proper middle placement 
     */
+    text-align: center;
 }
 
 .heading-primary {
@@ -105,7 +106,7 @@ body {
         this prevents the element from being shaky.
         hides the back part of the element
     */
-
+    margin-bottom: 60px;
 }
 
 /*
@@ -179,4 +180,97 @@ body {
 
 /*
     to types of animations = transitions, keyframes
+*/
+
+@keyframes moveInButton {
+    0% {
+        opacity: 0;
+        transform: translateY(100px);
+    }
+
+    80% {
+        transform: translateY(-10px);
+    }
+
+    100% {
+        opacity: 1;
+        transform: translate(0);
+    }
+}
+
+.btn:link, .btn:visited {
+    /*when it is a link and when we have visited the link. 
+    so we have the same properties for each state*/
+    text-transform: uppercase;
+    text-decoration: none;
+    padding: 15px 40px;
+    display: inline-block;
+    border-radius: 100px;
+    transition: all .2s ;
+    /* transition should be on the initial state */
+    position: relative;
+    
+}
+
+.btn-animated {
+    animation: moveInButton 2s ease-out .7s;
+    animation-fill-mode: backwards;
+    /* animation fill mode will automatically apply the animations of the 0% before begining */
+}
+
+.btn:hover {
+    /*when we hover over element*/
+    transform: translateY(-3px);
+    box-shadow: 0 10px 20px rgba(0, 0, 0, .2);
+    /* first number is shaddow along x axis, the shadow along y axis, then the blur of the shadow, then color */
+
+}
+
+.btn:active {
+    /*active state means when we click*/
+    transform: translate(-1px);
+    box-shadow: 0 5px 10px rgba(0, 0, 0, .2);
+}
+
+.btn-white {
+    background-color: white;
+    color: #777;
+}
+
+.btn::after {
+    /* content and display property must be specified in order to do anything */
+    content: "";
+    display: inline-block;
+    height: 100%;
+    width: 100%;
+    border-radius: 100px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    /* z-index difines position of elements if they are one on top of another 
+    negative one means it is back one layer*/
+    transition: all .4s;
+}
+
+.btn::after {
+    background-color: #fff;
+}
+
+.btn:hover::after {
+    transform: scaleX(1.4) scaleY(1.6);
+    /* scale increases the sie of the property
+    scale 2 == double the size */
+    opacity: 0;
+}
+
+
+/* 
+    responsive design - works the same across all devices
+    maintainable and scalable code - write code that is clean and easier to understand that is reusable
+    web perfmance - making it faster and smaller in size. small http requests as possible
+
+    
+
+
 */
