--- a/Natours/starter/sass/base/_typography.scss
+++ b/Natours/starter/sass/base/_typography.scss
@@ -5,7 +5,7 @@ body {
     */
     font-family: "Lato", sans-serif;
     font-weight: 400;
-    font-size: 1.6rem;
+    font-size: $default-font-size;
     line-height: 1.7;
     color: $color-grey-dark;
 
@@ -32,7 +32,7 @@ body {
         font-weight: 400;
         letter-spacing: 3.5rem;
 
-        animation-name: movecInLeft;
+        animation-name: moveInLeft;
         animation-duration: 2s;
         
         /*
@@ -56,4 +56,35 @@ body {
         */
     }
 
+}
+
+.heading-secondary {
+    font-size: 3.5rem;
+    text-transform: uppercase;
+    font-weight: 700;
+    display: inline-block;
+    background-image: linear-gradient(to right, $color-primary-light, $color-primary-dark);
+    -webkit-background-clip: text;
+    color: transparent;
+    letter-spacing: 2px;
+    transition: all .2s;
+
+    &:hover {
+        transform: skewY(-5deg) skewX(2deg);
+        text-shadow: .5rem 1rem 2rem rgba($color-black, .2);
+    }
+}
+
+.heading-tertiary {
+    font-size: $default-font-size;
+    font-weight: 700;
+    text-transform: uppercase;
+}
+
+.paragraph {
+    font-size: $default-font-size;
+    
+    &:not(:last-child){
+        margin-bottom: 3rem;
+    }
 }
