--- a/Natours/starter/sass/main.scss
+++ b/Natours/starter/sass/main.scss
@@ -10,9 +10,11 @@
 @import "pages/home";
 
 @import "components/btn";
+@import "components/composition";
 
 @import "layout/header";
 @import "layout/grid";
+
 
 
 
